Bug 397498 - Peruse 1.2 won't show images on ubuntu MATE
Summary: Peruse 1.2 won't show images on ubuntu MATE
Status: RESOLVED FIXED
Alias: None
Product: peruse
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dan Leinir Turthra Jensen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-15 20:59 UTC by Brunoais
Modified: 2018-08-16 14:03 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Example of not being able to open the image (49.82 KB, image/png)
2018-08-15 20:59 UTC, Brunoais
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Brunoais 2018-08-15 20:59:32 UTC
Created attachment 114449 [details]
Example of not being able to open the image

I can start the program but, when I select to see an image (tested on .jpeg and png images), the viewer cannot display them. Nothing is shown, only the program's background (see the censored image attached).
It was also unable to display the image I attached here.
Comment 1 Dan Leinir Turthra Jensen 2018-08-16 07:09:58 UTC
Right, so effectively this is not the correct bug - Peruse isn't really a generic image viewer, so being able to just open image files isn't really what it's supposed to be able to do. However, it /should/ be able to navigate images in a directory (i know people store comics like that, so that makes perfect sense), and well, that just was never implemented. I'll get right on that, however, so thank you for the report :)
Comment 2 Brunoais 2018-08-16 07:30:45 UTC
Indeed. I am one such person that stores the comics as individual images on directories. If I try to open the directory, it is also unable to open the images.
Anyhow, that explains it. Thank you.

I'll be looking for the update. o/
Comment 3 Dan Leinir Turthra Jensen 2018-08-16 14:03:25 UTC
Fixed in b3e05cdbd957

Make the folderofimages book type work

This also includes recognising when an image is picked (png or jpg
for now, though i'm sure more could be added if we wanted to).

BUG:397498