Make the folderofimages book type work

This also includes recognising when an image is picked (png or jpg
for now, though i'm sure more could be added if we wanted to).

BUG:397498